--- a/src/API/VoipProjectEntities.Api/appsettings.json
+++ b/src/API/VoipProjectEntities.Api/appsettings.json
@@ -1,8 +1,8 @@
 {
   "ConnectionStrings": {
-    "ApplicationConnectionString": "Server=DESKTOP-RC9OQCU\\SQLEXPRESS;Database=VoipProjectEntities.ApplicationDb;Trusted_Connection=True;", //
-    "IdentityConnectionString": "Server=DESKTOP-RC9OQCU\\SQLEXPRESS;Database=VoipProjectEntities.ApplicationDb;Trusted_Connection=True;", //
-    "HealthCheckConnectionString": "Server=DESKTOP-RC9OQCU\\SQLEXPRESS;Database=VoipProjectEntities.HealtchCheckDb;Trusted_Connection=True;", //
+    "ApplicationConnectionString": "Server=DESKTOP-G1403IG\\DOTNET;Database=VoipProjectEntities.ApplicationDb;Trusted_Connection=True;", //
+    "IdentityConnectionString": "Server=DESKTOP-G1403IG\\DOTNET;Database=VoipProjectEntities.ApplicationDb;Trusted_Connection=True;", //
+    "HealthCheckConnectionString": "Server=DESKTOP-G1403IG\\DOTNET;Database=VoipProjectEntities.HealtchCheckDb;Trusted_Connection=True;", //
     "KeyValue": "MAKV2SPBNI99212" //
   },
 
